[project]
name = "progress-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "langgraph>=0.2.59",
    "langchain-openai>=0.2.12",
    "loguru>=0.7.3",
    "langfuse>=2.57.0",
    "psycopg2-binary>=2.9.10",
    "langchain>=0.3.13",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
]
